--- a/style.css
+++ b/style.css
@@ -12,6 +12,120 @@ body {
   align-items: center;
   min-height: 100vh;
 }
+@media (min-width: 1000px) {
+  section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(#ffeb3b, #e91e63);
+    z-index: 1;
+  }
+
+  section h2 {
+    position: relative;
+    text-align: center;
+    font-size: 160px;
+    color: #fff;
+    text-shadow: 0 5px 10px rgba(102, 79, 79, 5);
+  }
+
+  section h2 span {
+    font-size: 30px;
+    font-family: sans-serif;
+    z-index: 1;
+  }
+
+  section h2::before {
+    content: '';
+    position: absolute;
+    top: -44px;
+    left: -100px;
+    width: 200px;
+    height: 200px;
+    background: transparent;
+    border-left: 15px solid #fff;
+    border-radius: 50%;
+    transform: rotate(-30deg);
+    box-shadow: -14px 1px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+  }
+
+  .mosque {
+    background: url(/assets/mosque.png);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    background-repeat: repeat-x;
+    background-size: 1200px;
+    /* z-index: 1; */
+    pointer-events: none;
+    animation: animate 20s linear infinite;
+  }
+
+  @keyframes animate {
+    0% {
+      background-position: 0px;
+    }
+    100% {
+      background-position: 1200px;
+    }
+  }
+
+  .mosque::before {
+    content: '';
+    background: url(/assets/mosque.png);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
+    background-repeat: repeat-x;
+    background-size: 1600px;
+    /* z-index: 1; */
+    pointer-events: none;
+    opacity: 0.1;
+    animation: animateReverse 40s linear infinite;
+  }
+
+  @keyframes animateReverse {
+    0% {
+      background-position: 1600px;
+    }
+    100% {
+      background-position: 0px;
+    }
+  }
+
+  .particles-js-canvas-el {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.wrapper {
+  background-size: cover;
+  background-position: center center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+/* @media (min-width: 300px) { */
+.wrapper {
+  display: flex;
+  flex-grow: wrap;
+}
 
 section {
   position: relative;
@@ -20,35 +134,37 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background: linear-gradient(#ffe23b, #e91e1e); */
   background: linear-gradient(#ffeb3b, #e91e63);
+  z-index: 1;
 }
 
 section h2 {
   position: relative;
   text-align: center;
-  font-size: 160px;
+  font-size: calc(50px + 2vw);
   color: #fff;
-  text-shadow: 0 5px 10px rgba(0, 0, 0, 5);
+  text-shadow: 0 5px 10px rgba(102, 79, 79, 5);
+  z-index: 1;
 }
 
 section h2 span {
-  font-size: 30px;
+  font-size: calc(10px + 2vw);
   font-family: sans-serif;
 }
 
 section h2::before {
   content: '';
   position: absolute;
-  top: -44px;
-  left: -100px;
-  width: 200px;
-  height: 200px;
+  top: -2px;
+  left: 0px;
+  width: 60px;
+  height: 50px;
   background: transparent;
-  border-left: 15px solid #fff;
-  border-radius: 50%;
-  transform: rotate(-30deg);
-  box-shadow: -14px 1px 10px rgba(0, 0, 0, 0.5);
+  border-left: 5px solid #fff;
+  border-radius: 90%;
+  transform: rotate(-35deg);
+  box-shadow: -70px 1px 20px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .mosque {
@@ -60,7 +176,7 @@ section h2::before {
   height: 400px;
   background-repeat: repeat-x;
   background-size: 1200px;
-  z-index: 1;
+  /* z-index: 1; */
   pointer-events: none;
   animation: animate 20s linear infinite;
 }
@@ -105,4 +221,124 @@ section h2::before {
   left: 0;
   width: 100%;
   height: 100%;
+}
+/* } */
+
+/* iPhone X ----------- */
+@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) {
+  /* Styles */
+  .wrapper {
+    display: flex;
+    flex-grow: wrap;
+  }
+
+  section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(#ffeb3b, #e91e63);
+    z-index: 1;
+  }
+
+  section h2 {
+    position: relative;
+    text-align: center;
+    font-size: calc(50px + 2vw);
+    color: #fff;
+    text-shadow: 0 5px 10px rgba(102, 79, 79, 5);
+    z-index: 1;
+  }
+
+  section h2 span {
+    font-size: calc(10px + 2vw);
+    font-family: sans-serif;
+    z-index: 1;
+  }
+
+  section h2::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: 0px;
+    width: 60px;
+    height: 50px;
+    background: transparent;
+    border-left: 5px solid #fff;
+    border-radius: 90%;
+    transform: rotate(-35deg);
+    box-shadow: -70px 1px 20px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+  }
+
+  .mosque {
+    background: url(/assets/mosque.png);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    background-repeat: repeat-x;
+    background-size: 1200px;
+    /* z-index: 1; */
+    pointer-events: none;
+    animation: animate 20s linear infinite;
+  }
+
+  @keyframes animate {
+    0% {
+      background-position: 0px;
+    }
+    100% {
+      background-position: 1200px;
+    }
+  }
+
+  .mosque::before {
+    content: '';
+    background: url(/assets/mosque.png);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
+    background-repeat: repeat-x;
+    background-size: 1600px;
+    /* z-index: 1; */
+    pointer-events: none;
+    opacity: 0.1;
+    animation: animateReverse 40s linear infinite;
+  }
+
+  @keyframes animateReverse {
+    0% {
+      background-position: 1600px;
+    }
+    100% {
+      background-position: 0px;
+    }
+  }
+
+  .particles-js-canvas-el {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
+  /* Styles */
+}
+
+/* iPhone XS Max, XR ----------- */
+@media only screen and (min-device-width: 414px) and (max-device-height: 896px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) {
+  /* Styles */
+}
+
+@media only screen and (min-device-width: 414px) and (max-device-height: 896px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
+  /* Styles */
 }
